--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -12,7 +12,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>609</width>
+            <width>601</width>
             <height>538</height>
         </rect>
     </property>
@@ -20,26 +20,6 @@
         <name>caption</name>
         <string>Zertifikats und Schlüsselverwaltung</string>
     </property>
-    <widget>
-        <class>QPushButton</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>quitApp</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>480</x>
-                <y>490</y>
-                <width>108</width>
-                <height>32</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Beenden</string>
-        </property>
-    </widget>
     <widget>
         <class>QLabel</class>
         <property stdset="1">
@@ -112,30 +92,6 @@
                     <name>frameShadow</name>
                     <enum>Sunken</enum>
                 </property>
-                <widget>
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>bigKey</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>20</x>
-                            <y>290</y>
-                            <width>190</width>
-                            <height>80</height>
-                        </rect>
-                    </property>
-                    <property stdset="1">
-                        <name>pixmap</name>
-                        <pixmap></pixmap>
-                    </property>
-                    <property stdset="1">
-                        <name>scaledContents</name>
-                        <bool>true</bool>
-                    </property>
-                </widget>
                 <widget>
                     <class>QPushButton</class>
                     <property stdset="1">
@@ -217,6 +173,30 @@
                     </property>
                 </widget>
                 <widget>
+                    <class>QLabel</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>bigKey</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>geometry</name>
+                        <rect>
+                            <x>20</x>
+                            <y>290</y>
+                            <width>190</width>
+                            <height>80</height>
+                        </rect>
+                    </property>
+                    <property stdset="1">
+                        <name>pixmap</name>
+                        <pixmap></pixmap>
+                    </property>
+                    <property stdset="1">
+                        <name>scaledContents</name>
+                        <bool>true</bool>
+                    </property>
+                </widget>
+                <widget>
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
@@ -234,6 +214,26 @@
                     <property stdset="1">
                         <name>text</name>
                         <string>Delete</string>
+                    </property>
+                </widget>
+                <widget>
+                    <class>QPushButton</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>renameKey_2</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>geometry</name>
+                        <rect>
+                            <x>18</x>
+                            <y>225</y>
+                            <width>190</width>
+                            <height>32</height>
+                        </rect>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>Export PKCS#12</string>
                     </property>
                 </widget>
             </widget>
@@ -658,6 +658,26 @@
             </attribute>
         </widget>
     </widget>
+    <widget>
+        <class>QPushButton</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>quitApp</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>480</x>
+                <y>490</y>
+                <width>108</width>
+                <height>32</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Exit</string>
+        </property>
+    </widget>
 </widget>
 <connections>
     <connection>
@@ -768,6 +788,12 @@
         <receiver>MainWindow_UI</receiver>
         <slot>showDetailsCert()</slot>
     </connection>
+    <connection>
+        <sender>renameKey_2</sender>
+        <signal>stateChanged(int)</signal>
+        <receiver>MainWindow_UI</receiver>
+        <slot>writePKCS12()</slot>
+    </connection>
     <slot access="public">deleteCert()</slot>
     <slot access="public">deleteKey()</slot>
     <slot access="public">deleteReq()</slot>
@@ -777,9 +803,10 @@
     <slot access="public">newCert()</slot>
     <slot access="public">newKey()</slot>
     <slot access="public">newReq()</slot>
-    <slot access="public">showDetailsKey()</slot>
+    <slot access="public">writePKCS12()</slot>
     <slot access="public">showDetailsCert()</slot>
     <slot access="public">showDetailsCert(QListViewItem *)</slot>
+    <slot access="public">showDetailsKey()</slot>
     <slot access="public">showDetailsKey(QListViewItem *)</slot>
     <slot access="public">showDetailsReq()</slot>
     <slot access="public">showDetailsReq(QListViewItem *)</slot>
