--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -12,7 +12,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>601</width>
+            <width>597</width>
             <height>538</height>
         </rect>
     </property>
@@ -38,6 +38,26 @@
         <property stdset="1">
             <name>text</name>
             <string>(c) 2002 by christian@hohnstaedt.de</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QPushButton</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>quitApp</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>480</x>
+                <y>490</y>
+                <width>108</width>
+                <height>32</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Exit</string>
         </property>
     </widget>
     <widget>
@@ -214,26 +234,6 @@
                     <property stdset="1">
                         <name>text</name>
                         <string>Delete</string>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QPushButton</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>renameKey_2</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>18</x>
-                            <y>225</y>
-                            <width>190</width>
-                            <height>32</height>
-                        </rect>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>Export PKCS#12</string>
                     </property>
                 </widget>
             </widget>
@@ -468,6 +468,36 @@
                 <string>Certificate</string>
             </attribute>
             <widget>
+                <class>QListView</class>
+                <column>
+                    <property>
+                        <name>text</name>
+                        <string>Name</string>
+                    </property>
+                    <property>
+                        <name>clickable</name>
+                        <bool>true</bool>
+                    </property>
+                    <property>
+                        <name>resizeable</name>
+                        <bool>true</bool>
+                    </property>
+                </column>
+                <property stdset="1">
+                    <name>name</name>
+                    <cstring>certList</cstring>
+                </property>
+                <property stdset="1">
+                    <name>geometry</name>
+                    <rect>
+                        <x>10</x>
+                        <y>20</y>
+                        <width>290</width>
+                        <height>390</height>
+                    </rect>
+                </property>
+            </widget>
+            <widget>
                 <class>QFrame</class>
                 <property stdset="1">
                     <name>name</name>
@@ -614,36 +644,26 @@
                         <bool>true</bool>
                     </property>
                 </widget>
-            </widget>
-            <widget>
-                <class>QListView</class>
-                <column>
-                    <property>
+                <widget>
+                    <class>QPushButton</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>renameKey_2</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>geometry</name>
+                        <rect>
+                            <x>20</x>
+                            <y>220</y>
+                            <width>190</width>
+                            <height>32</height>
+                        </rect>
+                    </property>
+                    <property stdset="1">
                         <name>text</name>
-                        <string>Name</string>
+                        <string>Export PKCS#12</string>
                     </property>
-                    <property>
-                        <name>clickable</name>
-                        <bool>true</bool>
-                    </property>
-                    <property>
-                        <name>resizeable</name>
-                        <bool>true</bool>
-                    </property>
-                </column>
-                <property stdset="1">
-                    <name>name</name>
-                    <cstring>certList</cstring>
-                </property>
-                <property stdset="1">
-                    <name>geometry</name>
-                    <rect>
-                        <x>10</x>
-                        <y>20</y>
-                        <width>290</width>
-                        <height>390</height>
-                    </rect>
-                </property>
+                </widget>
             </widget>
         </widget>
         <widget>
@@ -657,26 +677,6 @@
                 <string>Settings</string>
             </attribute>
         </widget>
-    </widget>
-    <widget>
-        <class>QPushButton</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>quitApp</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>480</x>
-                <y>490</y>
-                <width>108</width>
-                <height>32</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Exit</string>
-        </property>
     </widget>
 </widget>
 <connections>
@@ -790,7 +790,7 @@
     </connection>
     <connection>
         <sender>renameKey_2</sender>
-        <signal>stateChanged(int)</signal>
+        <signal>clicked()</signal>
         <receiver>MainWindow_UI</receiver>
         <slot>writePKCS12()</slot>
     </connection>
