--- a/NewKey.ui
+++ b/NewKey.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>478</width>
+            <width>474</width>
             <height>327</height>
         </rect>
     </property>
@@ -19,6 +19,26 @@
         <name>caption</name>
         <string>New key</string>
     </property>
+    <widget>
+        <class>QPushButton</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>PushButton2</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>360</x>
+                <y>280</y>
+                <width>108</width>
+                <height>32</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Cancel</string>
+        </property>
+    </widget>
     <widget>
         <class>QLabel</class>
         <property stdset="1">
@@ -67,66 +87,117 @@ Keysize</string>
         </property>
     </widget>
     <widget>
-        <class>QLabel</class>
+        <class>QGroupBox</class>
         <property stdset="1">
             <name>name</name>
-            <cstring>img</cstring>
+            <cstring>GroupBox4</cstring>
         </property>
         <property stdset="1">
             <name>geometry</name>
             <rect>
-                <x>370</x>
-                <y>10</y>
-                <width>100</width>
-                <height>47</height>
+                <x>20</x>
+                <y>130</y>
+                <width>450</width>
+                <height>130</height>
             </rect>
         </property>
         <property stdset="1">
             <name>frameShape</name>
-            <enum>MShape</enum>
+            <enum>Box</enum>
         </property>
         <property stdset="1">
             <name>frameShadow</name>
-            <enum>MShadow</enum>
+            <enum>Sunken</enum>
         </property>
         <property stdset="1">
-            <name>text</name>
-            <string></string>
+            <name>title</name>
+            <string>Key properties</string>
         </property>
-        <property stdset="1">
-            <name>scaledContents</name>
-            <bool>true</bool>
-        </property>
-        <property stdset="1">
-            <name>alignment</name>
-            <set>AlignVCenter|AlignLeft</set>
-        </property>
-        <property>
-            <name>vAlign</name>
-        </property>
-        <property>
-            <name>wordwrap</name>
-        </property>
-    </widget>
-    <widget>
-        <class>QPushButton</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>PushButton2</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>360</x>
-                <y>280</y>
-                <width>108</width>
-                <height>32</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Cancel</string>
-        </property>
+        <widget>
+            <class>QComboBox</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>keyLength</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>140</x>
+                    <y>80</y>
+                    <width>110</width>
+                    <height>27</height>
+                </rect>
+            </property>
+        </widget>
+        <widget>
+            <class>QLabel</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>TextLabel2</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>20</x>
+                    <y>80</y>
+                    <width>100</width>
+                    <height>23</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>text</name>
+                <string>Keysize</string>
+            </property>
+            <property stdset="1">
+                <name>scaledContents</name>
+                <bool>false</bool>
+            </property>
+        </widget>
+        <widget>
+            <class>QLabel</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>TextLabel5</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>20</x>
+                    <y>30</y>
+                    <width>100</width>
+                    <height>20</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>font</name>
+                <font>
+                </font>
+            </property>
+            <property stdset="1">
+                <name>text</name>
+                <string>Name:</string>
+            </property>
+        </widget>
+        <widget>
+            <class>QLineEdit</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>keyDesc</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>140</x>
+                    <y>30</y>
+                    <width>290</width>
+                    <height>23</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>text</name>
+                <string>New Key</string>
+            </property>
+        </widget>
     </widget>
     <widget>
         <class>QPushButton</class>
@@ -413,117 +484,46 @@ Keysize</string>
         </property>
     </widget>
     <widget>
-        <class>QGroupBox</class>
+        <class>QLabel</class>
         <property stdset="1">
             <name>name</name>
-            <cstring>GroupBox4</cstring>
+            <cstring>image</cstring>
         </property>
         <property stdset="1">
             <name>geometry</name>
             <rect>
-                <x>20</x>
-                <y>130</y>
-                <width>450</width>
-                <height>130</height>
+                <x>370</x>
+                <y>10</y>
+                <width>100</width>
+                <height>47</height>
             </rect>
         </property>
         <property stdset="1">
             <name>frameShape</name>
-            <enum>Box</enum>
+            <enum>MShape</enum>
         </property>
         <property stdset="1">
             <name>frameShadow</name>
-            <enum>Sunken</enum>
+            <enum>MShadow</enum>
         </property>
         <property stdset="1">
-            <name>title</name>
-            <string>Key properties</string>
+            <name>text</name>
+            <string></string>
         </property>
-        <widget>
-            <class>QComboBox</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>keyLength</cstring>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>140</x>
-                    <y>80</y>
-                    <width>110</width>
-                    <height>27</height>
-                </rect>
-            </property>
-        </widget>
-        <widget>
-            <class>QLineEdit</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>keyDesc</cstring>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>140</x>
-                    <y>30</y>
-                    <width>290</width>
-                    <height>23</height>
-                </rect>
-            </property>
-            <property stdset="1">
-                <name>text</name>
-                <string>New Key</string>
-            </property>
-        </widget>
-        <widget>
-            <class>QLabel</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>TextLabel5</cstring>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>20</x>
-                    <y>30</y>
-                    <width>100</width>
-                    <height>20</height>
-                </rect>
-            </property>
-            <property stdset="1">
-                <name>font</name>
-                <font>
-                </font>
-            </property>
-            <property stdset="1">
-                <name>text</name>
-                <string>Name:</string>
-            </property>
-        </widget>
-        <widget>
-            <class>QLabel</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>TextLabel2</cstring>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>20</x>
-                    <y>80</y>
-                    <width>100</width>
-                    <height>23</height>
-                </rect>
-            </property>
-            <property stdset="1">
-                <name>text</name>
-                <string>Keysize</string>
-            </property>
-            <property stdset="1">
-                <name>scaledContents</name>
-                <bool>false</bool>
-            </property>
-        </widget>
+        <property stdset="1">
+            <name>scaledContents</name>
+            <bool>true</bool>
+        </property>
+        <property stdset="1">
+            <name>alignment</name>
+            <set>AlignVCenter|AlignLeft</set>
+        </property>
+        <property>
+            <name>vAlign</name>
+        </property>
+        <property>
+            <name>wordwrap</name>
+        </property>
     </widget>
 </widget>
 <connections>
