--- a/NewX509Req.ui
+++ b/NewX509Req.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>732</width>
+            <width>728</width>
             <height>400</height>
         </rect>
     </property>
@@ -451,26 +451,6 @@
         <class>QLabel</class>
         <property stdset="1">
             <name>name</name>
-            <cstring>img</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>600</x>
-                <y>10</y>
-                <width>100</width>
-                <height>47</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>scaledContents</name>
-            <bool>true</bool>
-        </property>
-    </widget>
-    <widget>
-        <class>QLabel</class>
-        <property stdset="1">
-            <name>name</name>
             <cstring>TextLabel1</cstring>
         </property>
         <property stdset="1">
@@ -515,6 +495,26 @@
             <string>For a new certificate you have to enter your personal data into the form and select a key to use.
 
 For a SSL servercertificate choose the DNS name of the server</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>image</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>600</x>
+                <y>10</y>
+                <width>100</width>
+                <height>47</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>scaledContents</name>
+            <bool>true</bool>
         </property>
     </widget>
 </widget>
